force-app/main/default/objects/PIR_Participant_Workflow_Outcome__mdt/PIR_Participant_Workflow_Outcome__mdt.object-meta.xml
<CustomObject>
    <label>PIR_Participant Workflow Outcome</label>
    <pluralLabel>PIR_Participant Workflow Outcomes</pluralLabel>
</CustomObject>