force-app/main/default/objects/PIR_Participant_Workflow_Outcome__mdt/fields/Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Name__c</fullName>
    <label>Status Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>