force-app/main/default/objects/PIR_Participant_Workflow_Outcome__mdt/fields/Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Status_Value__c</fullName>
    <label>Status Value</label>
    <length>225</length>
    <type>Text</type>
</CustomField>